# upy

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  vcpkg.json
cpp/: test.cpp  upy.cpp  upy.h
src/upy/: client.py  server.py
